--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "Libraries/UIButtonBackgroundColor"]
 	path = Libraries/UIButtonBackgroundColor
-	url = git://github.com/acani/UIButtonBackgroundColor.git
+	url = https://github.com/jrudderman/UIButtonBackgroundColor.git
 [submodule "Libraries/Networking"]
 	path = Libraries/Networking
-	url = git://github.com/acani/Networking.git
+	url = https://github.com/jrudderman/Networking.git
 [submodule "Libraries/CodeInputView"]
 	path = Libraries/CodeInputView
-	url = git://github.com/acani/CodeInputView.git
+	url = https://github.com/jrudderman/CodeInputView.git
